<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">besecure</string>
    <string name="action_settings">Settings</string>
    <string name="to">To: </string>
    <string name="bsecure">Be Secure..! Just a click away..! Click the button and inform your emergency contact about the danger..!</string>
    <string name="danger">Hey ! I am in danger. Help !</string>
    <string name="send">SEND</string>
    <string name="no">8976650862</string>

</resources>